--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/autogarage?useLegacyDatetimeCode=false&serverTimezone=Europe/Amsterdam&useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/dbwillem?useLegacyDatetimeCode=false&serverTimezone=Europe/Amsterdam&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=springuser
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/autogarage?useLegacyDatetimeCode=false&serverTimezone=Europe/Amsterdam&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Zort3Brain2!
 
 ####Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -13,3 +13,6 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #logging.level.org.hibernate.type=TRACE
+# App Properties
+novi.sec.jwtSecret= noviHogeschoolSecretKey
+novi.sec.jwtExpirationMs= 86400000
